fixed bug with portrait where it wouldnt display porperly on small devices and added content to readme

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,8 +313,8 @@ a > i {
 @media screen and (max-width:650px){
     #portrait {
         width: 100%;
-        height: 200px;
-        margin: 30px 40px;
+        height: 150px;
+        margin: 30px 30px;
     }
 
     header > * {
